# zv9.SSXL-ext

./: .gitignore  LOC_godot.ps1  LOC_print_both.ps1  LOC_scan.ps1  README.md  demo_machine.ps1  demo_machine.txt  rust_cheat_sheet.rs
Source/rust/iteration5/aetherion_binary/: Cargo.toml
Source/rust/iteration5/aetherion_binary/src/: main.rs  zv9_util_binary_func.rs  zv9_util_binary_func2.rs  zv9_util_binary_func3.rs  zv9_util_binary_func_godot.rs  zv9_util_binary_menu.rs
Source/rust/iteration5/aetherion_core/: Cargo.toml
Source/rust/iteration5/aetherion_core/src/: lib.rs  zv9_aetherion_codegen_config.rs  zv9_aetherion_codegen_dsl.rs  zv9_aetherion_codegen_emitter.rs  zv9_aetherion_codegen_parser.rs  zv9_aetherion_core_conductor.rs  zv9_aetherion_core_dimension.rs  zv9_aetherion_core_lifecycle.rs  zv9_aetherion_core_runtime.rs  zv9_aetherion_generator_noise.rs  zv9_aetherion_generator_noise_config.rs  zv9_aetherion_generator_pattern_type.rs  zv9_aetherion_generator_patterns.rs  zv9_aetherion_interaction_modifiers.rs  zv9_aetherion_interaction_tools.rs  zv9_aetherion_pipeline_builder_bitmask.rs  zv9_aetherion_pipeline_builder_builder.rs  zv9_aetherion_pipeline_builder_dummy_delivery.rs  zv9_aetherion_pipeline_builder_streamer.rs  zv9_aetherion_pipeline_builder_threaded.rs  zv9_aetherion_structure_generation.rs  zv9_aetherion_structure_placement.rs  zv9_util_config.rs  zv9_util_direction.rs  zv9_util_position.rs  zv9_util_profiling.rs  zv9_util_random.rs  zv9_util_time.rs  zv9_util_timer.rs  zv9_util_velocity.rs
Source/rust/iteration5/aetherion_engine/: Cargo.toml
Source/rust/iteration5/aetherion_engine/src/: lib.rs  zv9_aetherion_engine_config_godot.rs  zv9_aetherion_engine_queue.rs  zv9_aetherion_pipeline_data_build_options.rs  zv9_aetherion_pipeline_data_vector.rs  zv9_aetherion_sync_bridge.rs  zv9_api.rs  zv9_godot_interface_api_config.rs  zv9_godot_interface_api_engine.rs  zv9_godot_interface_api_engine_core.rs  zv9_godot_interface_api_engine_signals.rs  zv9_godot_interface_api_engine_util.rs  zv9_lib.rs  (+14 more)
Source/rust/iteration5/aetherion_trailkeeper/: Cargo.toml
old_rust/ssxl_godot/: Cargo.toml
old_rust/ssxl_godot/src/: lib.rs
old_rust/ssxl_godot/src/engine/: cleanup.rs  commands.rs  init.rs  query_data.rs  tick.rs
old_rust/ssxl_godot/src/ffi/: mod.rs  oracle.rs  signals.rs
old_rust/ssxl_godot/src/tilemap/: async_poll.rs  mod.rs  status_reporter.rs
old_rust/ssxl_tools/: Cargo.toml
old_rust/ssxl_tools/src/: lib.rs
rust/ssxl_animate/: Cargo.toml
rust/ssxl_animate/src/: animation_logic.rs  conductor.rs  lib.rs  worker.rs
rust/ssxl_cache/: Cargo.toml
rust/ssxl_cache/src/: lib.rs
rust/ssxl_cli/: Cargo.toml  build.rs
rust/ssxl_cli/src/: cli_util_actions.rs  cli_util_bench.rs  cli_util_inspect.rs  cli_util_loc.rs  cli_util_loc_scan.rs  cli_util_menu.rs  godot_headless.rs  main.rs  pipeline.rs  run_ssxl.bat  ssxl_api_scan.rs  ssxl_config.rs  ssxl_godot.rs  ssxl_menu.rs  ssxl_source_scan.rs  ssxl_testing.rs
rust/ssxl_cli/src/actions/: actions.rs  benchmarking.rs  godot_harness.rs  godot_tests.rs  mod.rs  test_core_suites.rs  test_suites.rs  testing.rs  tests_core.rs
rust/ssxl_cli/src/scan/: file_walker.rs  mod.rs  report_formatter.rs  report_section_formatter.rs  report_writer.rs
rust/ssxl_engine_ffi/: Cargo.toml
rust/ssxl_engine_ffi/src/: lib.rs
rust/ssxl_ext/: Cargo.toml
rust/ssxl_ext/src/: animate_conductor.rs  animate_events.rs  animate_worker.rs  api_registry.rs  bridge_ffi.rs  bridge_oracle.rs  bridge_signals.rs  config.rs  generate_anim_conductor.rs  generate_batch_processor.rs  generate_ca.rs  generate_ca_simulation.rs  generate_conductor.rs  generate_conductor_state.rs  generate_conductor_sync.rs  generate_manager.rs  generate_map.rs  generate_perlin.rs  generate_runtime.rs  generate_task_queue.rs  generate_utils.rs  host_anim.rs  host_api.rs  host_cleanup.rs  host_commands.rs  host_conductor.rs  host_init.rs  host_poller.rs  host_render.rs  host_signals.rs  host_state.rs  host_tick.rs  host_tilemap.rs  host_tilemap_status.rs  lib.rs  rhythm_manager.rs  shared_chunk.rs  shared_config.rs  shared_error.rs  shared_math.rs  (+9 more)
rust/ssxl_ext/src/renderer/: atlas.rs  chunk_mesh.rs  mesh_builder.rs  mesh_upload.rs  mod.rs  renderer_node.rs
rust/ssxl_generate/: Cargo.toml
rust/ssxl_generate/src/: batch_processor.rs  benchmark_logic.rs  cellular_automata_generator.rs  conductor.rs  conductor_state.rs  config_validator.rs  generator.rs  generator_manager.rs  lib.rs  perlin_generator.rs  runtime_manager.rs  sync.rs  task_queue.rs
rust/ssxl_generate/src/ca/: cellular_automata_generator.rs  mod.rs  neighbor_check.rs  rule_set.rs
rust/ssxl_generate/src/conductor/: builder.rs  conductor.rs  conductor_state.rs  internal_setup.rs  mod.rs  sync.rs  sync_get.rs
rust/ssxl_generate/src/manager/: config_validator.rs  generator.rs  generator_manager.rs  mod.rs  runtime_manager.rs
rust/ssxl_generate/src/perlin/: mod.rs  perlin_generator.rs
rust/ssxl_generate/src/task/: batch_processor.rs  benchmark_logic.rs  mod.rs  task_queue.rs
rust/ssxl_godot/: Cargo.toml
rust/ssxl_godot/src/: animation_api.rs  api_initializers.rs  async_poll.rs  build.rs  channel_handler.rs  chunk_presenter.rs  engine_api_extension.rs  engine_core_logic.rs  gde_api_defs.rs  generation_api.rs  lib.rs  ssxl_engine.rs  ssxl_oracle.rs  ssxl_signals.rs  ssxl_tilemap.rs  status_reporter.rs
rust/ssxl_godot/src/anim/: animation_api.rs
rust/ssxl_godot/src/engine/: api.rs  api_initializers.rs  cleanup.rs  commands.rs  init.rs  mod.rs  poller.rs  query.rs  query_data.rs  render_batch.rs  state.rs  tick.rs
rust/ssxl_godot/src/ffi/: gde_api_defs.rs  mod.rs  oracle.rs  signals.rs
rust/ssxl_godot/src/tilemap/: async_poll.rs  mod.rs  ssxl_tilemap.rs  status_reporter.rs
rust/ssxl_math/: Cargo.toml
rust/ssxl_math/src/: coordinate_system.rs  generation_utils.rs  hashing.rs  lib.rs  primitives.rs
rust/ssxl_sync/: Cargo.toml
rust/ssxl_sync/src/: animation_conductor.rs  lib.rs  pool.rs  pool_manager.rs  primitives.rs
rust/ssxl_tools/: Cargo.toml
rust/ssxl_tools/src/: lib.rs
(+918 files in other folders)
