[package]
name = "ssxl_godot"
version = "0.9.1"
edition = "2021"

[dependencies]
# --- INTERNAL DEPENDENCIES ---
ssxl_shared = { path = "../ssxl_shared" }
ssxl_math = { path = "../ssxl_math" }
ssxl_generate = { path = "../ssxl_generate" }
ssxl_sync = { path = "../ssxl_sync", features = ["godot-bindings"] }
# --- EXTERNAL DEPENDENCIES ---

# CORE GDExtension BINDINGS
godot = { workspace = true }
godot-ffi = { workspace = true }
# Workspace standard logging framework
tracing = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
crossbeam-channel = { workspace = true }

###############################################################
# REQUIRED FIX FOR GDExtension LINKER ERROR (E0127)
###############################################################
[lib]
crate-type = ["cdylib"]
name = "ssxl_engine"
# The name "ssxl_engine" forces the creation of 
# 'ssxl_engine.dll' in the target directory,
# which Godot expects to find via the .gdextension file.