[package]
name = "ssxl_tools"
version = "0.9.1"
edition = "2021" 

[dependencies]
# Internal dependencies (Local Crates)
ssxl_shared = { path = "../ssxl_shared" }

# External dependency (Workspace-Inherited)
regex = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }