[package]
name = "ssxl_cache"
edition = "2021"

[dependencies]
# Internal Dependencies (Local Crates)
ssxl_shared = { path = "../ssxl_shared" }
ssxl_math = { path = "../ssxl_math" }
ssxl_sync = { path = "../ssxl_sync" }

# External Dependencies (Workspace-Inherited)
bincode = { workspace = true }
sha2 = { workspace = true }
glam = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
lru         = { workspace = true }