# --- In ssxl_cli/Cargo.toml ---
[package]
name = "ssxl_cli"
version = "0.9.1"
edition = "2021"

[[bin]]
name = "ssxl"
path = "src/main.rs"

[dependencies]
# --- INTERNAL DEPENDENCIES (Now using workspace = true) ---
# Dependencies are now inherited from the root Cargo.toml paths.
ssxl_shared = { workspace = true }
ssxl_engine_ffi = { workspace = true }
ssxl_tools = { workspace = true }
ssxl_generate = { workspace = true }
ssxl_math = { workspace = true }

# --- EXTERNAL DEPENDENCIES (Keep as is, they are already clean) ---
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
chrono = { workspace = true }
crossterm = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }

# You will likely need a CLI argument parsing library here, 
# such as 'clap', which is recommended for complex CLI tools.
clap = { version = "4.0", features = ["derive"] }