[package]
name = "ssxl_engine_ffi"
version = "0.6.0"
edition = "2021"


[dependencies]
# --- INTERNAL DEPENDENCIES (Core Logic) ---
# FFI needs access to all the core data and logic it is bridging.
ssxl_shared   = { path = "../ssxl_shared" }
ssxl_math     = { path = "../ssxl_math" }
ssxl_godot	  = { path = "../ssxl_godot" }
ssxl_generate = { path = "../ssxl_generate" }

# --- EXTERNAL DEPENDENCIES ---
# The standard C library definitions for safe FFI (e.g., c_char, c_void)
libc               = "0.2" 
# Workspace standard logging framework
tracing            = { workspace = true } 
tokio 			   = { workspace = true }
