# ssxl_ext/Cargo.toml (FIXED)

[package]
name = "ssxl_ext"
version = "0.9.1"
edition = "2021"

# The crate type must be 'cdylib' for a Godot GDExtension
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

# --- 1. Godot Bindings (Essential Bridge) ---
# godot is now strictly optional. It will only be compiled when the 'godot-binding' 
# feature is explicitly activated (e.g., when building the Godot DLL).
godot = { version = "^0.4.4", features = ["serde"], optional = true } 

# --- 2. Concurrency and Async (The Finisher/Conductor Core) ---
# These are required by both the CLI and the GDExtension.
tokio = { version = "1.48", features = ["rt", "macros", "sync"] } 
flume = "0.12" 
rayon = "1.11" 

# --- 3. Generation Primitives ---
# Core generation tools, required by both targets.
noise = { version = "0.9", default-features = false } 
once_cell = "1.21.3" 

# --- 4. Utilities and Serialization ---
# General utilities, required by both targets.
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
dashmap = "6.1.0"
thiserror = "2.0.17"


[features]
# 1. Define the feature that enables Godot code/dependencies.
# This feature must be explicitly provided when building the Godot DLL.
godot-binding = ["godot"] 

# 2. Define the feature that forces CLI/standard console logging.
# This feature should remain separate, but is now irrelevant as the CLI target 
# will simply compile without 'godot-binding'.
cli-logging = []

# 3. CRITICAL FIX: Removed 'default = ["godot-binding"]'.
# This ensures a simple 'cargo build' (or a CLI dependency build) will compile 
# without Godot, requiring the Godot build to be explicit: 
# cargo build --features godot-binding