[package]
name = "ssxl_math"
version = "0.9.1"
edition.workspace = true

[dependencies]
# Internal dependencies (Local Crates)

# External dependencies (Workspace-Inherited)
# FIX: Explicitly re-enable the 'serde' feature for glam.
# This ensures IVec3 implements Serialize/Deserialize, resolving the E0277 errors.
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true } # Added for defining local crate Result type
tracing = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_pcg = { workspace = true }