[package]
name = "ssxl_sync"
version = "0.9.1"
edition = "2021"

[dependencies]
# --- INTERNAL DEPENDENCIES ---
# Required for shared data types and the canonical error type
ssxl_shared = { path = "../ssxl_shared" }
ssxl_math = { path = "../ssxl_math" }
ssxl_animate = { path = "../ssxl_animate" }

# --- EXTERNAL CONCURRENCY & DIAGNOSTICS ---
# Primary async runtime
tokio               = { workspace = true, features = ["full"] }
# High-performance channel types
crossbeam           = { workspace = true }
crossbeam-channel   = { workspace = true }
# High-performance sync primitives (like RwLock, often preferred over std::sync)
parking_lot         = { workspace = true }
# Ensure we use the workspace's standard logging framework
tracing             = { workspace = true }
godot               = { workspace = true, optional = true }

[features]
# Add a feature flag for Godot-specific dependencies
godot-bindings = ["godot"]