[package]
name = "aetherion_binary"
version = "0.1.0"
edition = "2024"

[dependencies]
aetherion_core = { path = "../aetherion_core" }
aetherion_engine = { path = "../aetherion_engine" }  # ← Add this line
aetherion_shared = { path = "../aetherion_shared" }

crossterm = "0.27"
log = "0.4"
env_logger = "0.10"
walkdir = "2.5.0"
regex = "1.11.3"
chrono = "0.4.42"
rayon = "1.11.0"

