[package]
name    = "aetherion_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal
aetherion_shared = { path = "../aetherion_shared" }

# Core utilities (workspace-aligned)
serde       = { workspace = true }
serde_json  = { workspace = true }
bincode     = { workspace = true }
log         = { workspace = true }
chrono      = { workspace = true }
regex       = { workspace = true }
once_cell   = { workspace = true }
lazy_static = { workspace = true }
thiserror   = { workspace = true }
rayon       = { workspace = true }          # always on, no feature toggle
crossbeam   = { workspace = true }
crossbeam-channel = { workspace = true }

# Extra math / crypto
glam  = "0.30"
sha2  = "0.10"
image = "0.25"

# RNG backends
rand     = { workspace = true }  # Made non-optional for core procedural utilities
rand_pcg = { version = "0.3", optional = true }
nom = "8.0.0"
anyhow.workspace = true
tracing = { version = "0.1", optional = true }  # Added for verbose feature logging

[features]
# Fast RNG is the default
default   = ["fast_rng"]

profile   = []
verbose   = ["dep:tracing"]
rand_id   = []  # Retained for specific ID generation; no longer depends on rand
fast_rng  = ["dep:rand_pcg"]
std_rng   = []