[package]
name = "aetherion_trailkeeper"
version = "0.1.0"
edition = "2021"
description = "Trailkeeper subsystem for AetherionEngine — event logging, scanning, and registry tracking."
license = "MIT"

[dependencies]
chrono = "0.4"                      # For timestamping log entries
serde = { version = "1.0", features = ["derive"] }  # For serializing log data
log = "0.4"                         # Optional: if you want to integrate with Rust's logging ecosystem
uuid = { version = "1", features = ["v4"] }         # Optional: for unique event IDs
parking_lot = "0.12"               # Optional: fast locking for registry/watchers
anyhow = "1.0"                     # Optional: ergonomic error handling
aetherion_core = { path = "../aetherion_core" }
lazy_static = "1.5.0"

[features]
default = ["logging"]
logging = []                       # Toggle internal logging macros
export = []                        # Enable export functionality
watch = []                         # Enable file watching / scanning

[lib]
name = "aetherion_trailkeeper"
path = "src/lib.rs"

[build-dependencies]
# Optional: if you use macros or build-time codegen
